# GestureMatching

./: .gitignore  README.md  app.py  evaluation.py  inference.py  pyproject.toml  requirements.txt  utils.py
artefacts/: similarity_model-99.38.keras
templates/: index.html
