[project]
name = "gesturematching"
version = "0.1.0"
description = "enviroment for train and evaluate solution with or without FC-net"
authors = [
    {name = "Alex Haimin",email = "med53@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astunparse (==1.6.3)",
    "certifi (==2026.1.4)",
    "charset-normalizer (==3.4.4)",
    "colorama (==0.4.6)",
    "flatbuffers (==25.12.19)",
    "gast (==0.7.0)",
    "google-pasta (==0.2.0)",
    "jinja2 (==3.1.6)",
    "libclang (==18.1.1)",
    "mdurl (==0.1.2)",
    "namex (==0.1.0)",
    "opencv-contrib-python (==4.11.0.86)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "sounddevice (==0.5.5)",
    "tensorboard-data-server (==0.7.2)",
    "tqdm (==4.67.3)",
    "tzdata (==2025.3)",
    "absl-py (==2.4.0)",
    "attrs (==25.4.0)",
    "blinker (==1.9.0)",
    "cffi (==2.0.0)",
    "click (==8.3.1)",
    "cycler (==0.12.1)",
    "flask (==3.1.2)",
    "fonttools (==4.61.1)",
    "grpcio (==1.76.0)",
    "h5py (==3.15.1)",
    "idna (==3.11)",
    "itsdangerous (==2.2.0)",
    "contourpy (==1.3.3)",
    "jax (==0.4.29)",
    "jaxlib (==0.4.29)",
    "joblib (==1.5.3)",
    "keras (==3.13.2)",
    "kiwisolver (==1.4.9)",
    "markdown (==3.10.1)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.8)",
    "mediapipe (==0.10.21)",
    "ml-dtypes (==0.4.0)",
    "numpy (==1.26.4)",
    "opt-einsum (==3.4.0)",
    "optree (==0.18.0)",
    "packaging (==26.0)",
    "pandas (==2.3.3)",
    "pillow (==12.1.0)",
    "protobuf (==4.25.8)",
    "pycparser (==3.0)",
    "pygments (==2.19.2)",
    "pyparsing (==3.3.2)",
    "requests (==2.32.5)",
    "rich (==14.3.2)",
    "scikit-learn (==1.7.2)",
    "scipy (==1.16.3)",
    "seaborn (==0.13.2)",
    "sentencepiece (==0.2.1)",
    "setuptools (==80.10.2)",
    "tensorboard (==2.17.0)",
    "termcolor (==3.3.0)",
    "tensorflow (==2.17.0)",
    "tensorflow-intel  (==2.17.0)",
    "threadpoolctl (==3.6.0)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.6.3)",
    "werkzeug (==3.1.5)",
    "wheel (==0.46.3)",
    "wrapt (==2.1.1)"
]

[tool.poetry]
package-mode = false  

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

